--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <link rel='stylesheet' id='font-awesome-css'  href='https://use.fontawesome.com/releases/v5.3.1/css/all.css' type='text/css' media='all' />
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/media.css" type="text/css" />
@@ -85,12 +85,12 @@
                         <div class="site-logo">
                             <a class="site-logo-link" href="#">MoGo</a>
                         </div>
-                        <nav class="nav-wrap">
-                            <ul>
+                        <nav class="nav-wrap" >
+                            <ul id="menu">
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Service</a></li>
                                 <li><a href="#">Work</a></li>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="#blog">Blog</a></li>
                                 <li><a href="#">Contact</a></li>
                                 <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
                                 <li><a href="#"><i class="fas fa-search"></i></a></li>
@@ -111,68 +111,98 @@
             
         <!-- Основное содержимое страниц -->
         <main>
-            <section class="blog">
+            <section class="blog" id="blog">
                 <div class="container">
-                    <div class="header-blog">
+                    <div class="section-header">
                         <h3>Our stories</h3>
                         <h2>Latest blog</h2>
                     </div>
-                    <article class="items">
+                    <article class="blog-items">
                         <div class="row">
                             <div class="col-md-4">
-                                <section class="item">
+                                <section class="blog-item">
                                     <div class="blog-item-logo">
-                                        <img src="img/blog_item_img_01.png" alt="" class="blog-item-logo__img">
+                                        <a href="#" class="blog-item-logo__link">
+                                            <img src="img/blog_item_img_01.png" alt="" class="blog-item-logo__img">
+                                        </a>
                                         <div class="blog-item-logo__date">
                                             <div class="blog-item-logo__date-day">15</div>
                                             <div class="blog-item-logo__date-month">Jun</div>
                                         </div>
                                     </div>
                                     <div class="blog-item-content">
-                                        <h2 class="blog-item-content__title">
+                                        <div class="blog-item-content__title">
                                             Lorem ipsum dolor sit amet
-                                        </h2>
+                                        </div>
                                         <div class="blog-item-content__text">
                                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. ipsum dolor sit amet consectetur adipisicing
                                         </h2>
+                                    </div>
+                                    <div class="blog-item-meta">
+                                        <div class="blog-item-meta__views">
+                                            <i class="fas fa-eye"></i>542
+                                        </div>
+                                        <div class="blog-item-meta__comments">
+                                            <i class="fas fa-comment-dots"></i>17
+                                        </div>
                                     </div>
                                 </section>
                             </div>
                             <div class="col-md-4">
-                                <section class="item">
+                                <section class="blog-item">
                                     <div class="blog-item-logo">
-                                        <img src="img/blog_item_img_02.png" alt="" class="blog-item-logo__img">
+                                        <a href="#" class="blog-item-logo__link">
+                                            <img src="img/blog_item_img_02.png" alt="" class="blog-item-logo__img">
+                                        </a>
                                         <div class="blog-item-logo__date">
                                             <div class="blog-item-logo__date-day">15</div>
                                             <div class="blog-item-logo__date-month">Jun</div>
                                         </div>
                                     </div>
                                     <div class="blog-item-content">
-                                        <h2 class="blog-item-content__title">
+                                        <div class="blog-item-content__title">
                                             Lorem ipsum dolor sit amet
-                                        </h2>
+                                        </div>
                                         <div class="blog-item-content__text">
                                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. ipsum dolor sit amet consectetur adipisicing
                                         </h2>
                                     </div>
+                                    <div class="blog-item-meta">
+                                            <div class="blog-item-meta__views">
+                                                <i class="fas fa-eye"></i>542
+                                            </div>
+                                            <div class="blog-item-meta__comments">
+                                                <i class="fas fa-comment-dots"></i>17
+                                            </div>
+                                        </div>
                                 </section>
                             </div>
                             <div class="col-md-4">
-                                <section class="item">
+                                <section class="blog-item">
                                     <div class="blog-item-logo">
-                                        <img src="img/blog_item_img_03.png" alt="" class="blog-item-logo__img">
+                                        <a href="#" class="blog-item-logo__link">
+                                            <img src="img/blog_item_img_03.png" alt="" class="blog-item-logo__img">
+                                        </a>
                                         <div class="blog-item-logo__date">
                                             <div class="blog-item-logo__date-day">15</div>
                                             <div class="blog-item-logo__date-month">Jun</div>
                                         </div>
                                     </div>
                                     <div class="blog-item-content">
-                                        <h2 class="blog-item-content__title">
+                                        <div class="blog-item-content__title">
                                             Lorem ipsum dolor sit amet
-                                        </h2>
+                                        </div>
                                         <div class="blog-item-content__text">
                                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. ipsum dolor sit amet consectetur adipisicing
                                         </h2>
+                                    </div>
+                                    <div class="blog-item-meta">
+                                        <div class="blog-item-meta__views">
+                                            <i class="fas fa-eye"></i>542
+                                        </div>
+                                        <div class="blog-item-meta__comments">
+                                            <i class="fas fa-comment-dots"></i>17
+                                        </div>
                                     </div>
                                 </section>
                             </div>
@@ -182,6 +212,14 @@
                     </div>
                 </div>
 
+            </section>
+            <section class="whatWeDo" id="whatWeDo">
+                <div class="container">
+                    <div class="section-header">
+                        <h3>Service</h3>
+                        <h2>What we do</h2>
+                    </div>
+                </div>
             </section>
             
         </main>
